--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
     "expo": "~37.0.3",
     "mongodb-stitch-react-native-sdk": "^4.8.0",
     "react": "~16.9.0",
