switching to queue member. this still needs little tweeks

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.2.2",
     "axios": "^0.19.2",
     "emailjs-com": "^2.4.1",
     "expo": "~37.0.3",
@@ -17,6 +18,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^8.7.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
