--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "2.2.2",
     "axios": "^0.19.2",
     "emailjs-com": "^2.4.1",
