--- a/app.json
+++ b/app.json
@@ -2,8 +2,12 @@
   "expo": {
     "name": "nextup_manager",
     "slug": "nextup_manager",
-    "platforms": ["ios", "android", "web"],
-    "version": "1.0.6",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
+    "version": "1.0.7",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -14,7 +18,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "nextup"
